fix(plugins/plugin-bash-like): fixes for pty buggy scrollbars
Fixes #1288

--- a/plugins/plugin-bash-like/web/css/xterm.css
+++ b/plugins/plugin-bash-like/web/css/xterm.css
@@ -10,25 +10,17 @@ tab:not(.xterm-alt-buffer-mode) .xterm-container .xterm-screen {
 tab.xterm-alt-buffer-mode .repl-inner {
     overflow: hidden;
     display: flex;
-    align-items: flex-end;
-    background: var(--color-stripe-01);
+    align-items: flex-start;
     -webkit-app-region: drag; /* for emacs/vi, in case there is a top slice of repl-inner visible */
 }
-tab.xterm-alt-buffer-mode .repl-inner .repl-block {
+tab.xterm-alt-buffer-mode .repl-inner .repl-block.processing {
     -webkit-app-region: no-drag; /* but make sure the content of the blocks are not draggable */
 }
-tab.xterm-alt-buffer-mode .repl-result-spinner {
-    display: none;
-}
-tab.xterm-alt-buffer-mode .repl-block:not(.processing), tab.xterm-alt-buffer-mode .horizontal-landing-zone, tab.xterm-alt-buffer-mode .repl-input {
-    display: none;
-}
-tab.xterm-alt-buffer-mode .repl-output, tab.xterm-alt-buffer-mode .repl-block, tab.xterm-alt-buffer-mode .repl.sidecar-visible .repl-output, tab.xterm-alt-buffer-mode .repl.sidecar-visible .repl-result {
-    padding: 0;
-}
 tab.xterm-alt-buffer-mode .repl {
-    /* give a little bit of left-pad for emacs, vi, etc. see https://github.com/IBM/kui/issues/1331 */
-    padding-left: 4px;
+    background: var(--color-stripe-01);
+}
+tab.xterm-alt-buffer-mode .repl-block:not(.processing), tab.xterm-alt-buffer-mode .repl-input, tab.xterm-alt-buffer-mode .repl-result-spinner {
+    display: none;
 }
 
 tab:not(.xterm-alt-buffer-mode) .xterm.xterm-empty-row-heuristic .xterm-rows > div:empty {
